<resources>
    <string name="app_name">Tarea 3.1</string>
    <string name="Record">Record</string>
    <string name="Display">Display</string>
    <string name="Logo">Logo</string>
    <string name="Number">Number</string>
    <string name="Previous">Previous</string>
    <string name="Next">Next</string>
    <string name="Downloading_Title">Downloading title...</string>
    <string name="Downloading_Date">Downloading date...</string>
    <string name="Comic">Comic image</string>
    <string name="Icon">Icon</string>
    <string name="Title">Title</string>
    <string name="Date">Date</string>
    <string name="Id">Id</string>
</resources>